# coco

./: .gitignore  README.md  pyproject.toml  requirements.txt
base/: README.md  compose.yaml  placeholder.md
base/chunking/: Dockerfile  README.md  requirements.txt
base/coco_to_base/: Dockerfile  README.md  requirements.txt  stop_rm_rmi_container.sh
base/database/: Dockerfile  README.md  requirements.txt
base/docker_template/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
base/documents/: Base_SetUp.md
base/embedding/: Dockerfile  README.md  requirements.txt
base/orchestrator/: README.md  orchestrator.py
base/transcription/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  requirements.txt
coco/: README.md
coco/cad_files/: README.md  coco_top_v1.5.step
coco/coco-run-experimental/: README.md
coco/coco_run_v0.1.4/: coco_run_v0.1.4.ino
coco/experimental/: coco_update.md
coco/firmware/: .gitignore  README.md  battery_unload.ipynb  platformio.ini  temp.md
coco_firmware/: README.md
coco_firmware/cad_files/: coco_base_v1.5.step
coco_firmware/coco_run_v0.1/: coco_run_v0.1.ino
firmware/: README.md
firmware/coco_run_v0.1/: coco_run_v0.1.ino
firmware/coco_run_v0.1.1/: coco_run_v0.1.1.ino
firmware/coco_run_v0_1_offline/: coco_run_v0_1_offline.ino
frontend/: placeholder.md
mcp-materials/postgres-mcp-server-reference-implementation-ts/: Dockerfile  index.ts  package.json  tsconfig.json
mcp-materials/test-mcp-server/: Dockerfile  mcp-test-server-guide.md  pyproject.toml
python_sdk/: README.md  pyproject.toml
sdk/: README.md  pyproject.toml
sdk/src/coco/: transcription.py  utils.py
sdk/src/cocosdk/: constants.py  embeddings.py  rag.py  utils.py
services/: .env.template  README.md  backend_start.sh  backend_stop.sh  compose.yaml  python_sdk_entrypoint.sh
services/audio_preprocessing/: append_audio.py  testing.ipynb
services/chunking/: Dockerfile  requirements.txt
services/database/: Dockerfile
services/db_api/: Dockerfile  README.md  migrations.md  placeholder.MD  (+1 more)
services/mcp_coco_db_server/: Dockerfile  MCP-SERVER-IMPLEMENTATION-PLAN.md  README.md  pyproject.toml
services/mcp_coco_db_server/app/: coco_db_mcp_server.py
test/: dataset.csv
(+231 files in other folders)
