[project]
name = "coco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=3.4.1",
    "deepeval>=2.5.9",
    "evaluate>=0.4.3",
    "gradio>=5.22.0",
    "hydra-core>=1.3.2",
    "langchain-openai>=0.3.9",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "psycopg2-binary>=2.9.10",
    "ragas>=0.2.14",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sentence-transformers>=3.4.1",
    "wandb>=0.18.3",
]

[dependency-groups]
dev = [
]

[tool.uv.sources]
coco = { path = "python_sdk", editable = true }
